--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "file-type": "^18.7.0",
     "puppeteer": "^21.7.0",
     "serve-handler": "^6.1.5",
     "sharp": "^0.33.1"
