--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "express": "^4.18.2",
     "file-type": "^18.7.0",
     "puppeteer": "^21.7.0",
